# dicom_download_mcp

./: .gitignore  .npmignore  ARCHITECTURE.md  CHANGELOG.md  CONFIG_PARAMETERS.md  CONVERSION_SUMMARY.md  DEPLOYMENT.md  LICENSE  MANIFEST.in  MANUAL_TESTING.md  NPM_PUBLISH.md  PROGRESS_FEEDBACK.md  PROJECT_STRUCTURE.md  PUBLISH_GUIDE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_CN.md  SETUP_GUIDE.md  TESTING.md  claude_desktop_config.json  dicom-mcp-1.2.1.tgz  log_error.md  package.json  pyproject.toml  test_mcp_inspector.sh  test_tools.py
dicom_mcp/: __init__.py  server.py
scripts/: postinstall.js  validate.js
