[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-mcp"
version = "0.3.0"
description = "MCP server for DICOM image downloading from multiple medical imaging sources"
readme = "README.md"
license = {text = "DICOM-MCP Non-Commercial License"}
authors = [
    {name = "DICOM Download Contributors", email = "support@dicom-mcp.com"}
]
keywords = ["mcp", "dicom", "medical-imaging", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "mcp>=0.8.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "pydicom>=2.3.0",
    "playwright>=1.40.0",
    "aiofiles>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/hengqujushi/dicom_mcp"
Documentation = "https://github.com/hengqujushi/dicom_mcp#readme"
Repository = "https://github.com/hengqujushi/dicom_mcp.git"
Issues = "https://github.com/hengqujushi/dicom_mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
dicom_mcp = ["py.typed"]

[project.scripts]
dicom-mcp = "dicom_mcp.server:main"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
